<resources>
    <string name="app_name">Состав числа</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rules_title">Правила:</string>
    <string name="game_rules">
        Правила игры: перед вами будет три фигуры, две снизу и одна сверху, в двух из них будут
        числа. Необходимо, чтобы сумма чисел из двух нижних фигур была равна числу в верхней фигуре,
        для этого нужно вставить недостающее число.\n\nПример: в верхнем круге число 7, в одном
        из нижних знак вопроса, а в другом число 4. Значит на месте вопросительного знака должно
        быть число 3, потому что 3 + 4 = 7
    </string>
    <string name="level_test">Тест</string>
    <string name="level_easy">Легкий</string>
    <string name="level_normal">Средний</string>
    <string name="level_hard">Тяжелый</string>
    <string name="welcome_logo">Welcome logo</string>
    <string name="choose_level_title">Выберите уровень:</string>
    <string name="easy_level">Легкий</string>
    <string name="normal_level">Средний</string>
    <string name="hard_level">Тяжелый</string>
    <string name="test_level">Тестовый</string>
    <string name="game_over">Game Over</string>
    <string name="score_answers">Ваш счет: %s</string>
    <string name="score_percentage">Процент правильных ответов: %s</string>
    <string name="retry">Попробовать снова</string>
    <string name="right_answers">Правильных ответов %s из %s необходимых</string>
    <string name="required_percentage">Необходимый процент правильных ответов: %s</string>
    <string name="required_score">Необходимое количество правильных ответов: %s</string>
    <string name="progress_answers">Правильных ответов %s (минимум %s)</string>


    <string name="easy_level_desc">
        Легкий уровень игры:\n 60 секунд,\n 10 правильных ответов\n 50% правильных ответов
    </string>
    <string name="normal_level_desc">
        Средний уровень игры:\n 40 секунд,\n 20 правильных ответов\n 70% правильных ответов
    </string>
    <string name="hard_level_desc">
        Сложный уровень игры:\n 40 секунд,\n 30 правильных ответов\n 90% правильных ответов
    </string>

    <string name="question_mark">\\?</string>

</resources>