<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".presentation.ChooseLevelFragment">

        <Button
            android:id="@+id/btnTestLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/test_level_color"
            android:padding="16dp"
            android:text="@string/level_test"
            android:visibility="gone" />
        <TextView
            android:id="@+id/tvTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:visibility="gone" />


    <Button
        android:id="@+id/btnEasyLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/easy_level_color"
        android:padding="16dp"
        android:text="@string/level_easy" />

    <TextView
        android:id="@+id/tvEasyLevel"
        style="@style/DescTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/easy_level_desc" />

    <Button
        android:id="@+id/btnNormalLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/normal_level_color"
        android:padding="16dp"
        android:text="@string/level_normal" />

    <TextView
        android:id="@+id/tvNormalDesc"
        style="@style/DescTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/easy_level_desc" />

    <Button
        android:id="@+id/btnHardLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/hard_level_color"
        android:padding="16dp"
        android:text="@string/level_hard" />

    <TextView
        android:id="@+id/tvHardDesc"
        style="@style/DescTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hard_level_desc" />
</LinearLayout>